--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="width: 100%; height: 100%;">
+
 <head>
   <meta charset="utf-8">
   <title>EmailVerification</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body>
+
+<body style="width: 100%; height: 100%;">
   <app-root></app-root>
 </body>
+
 </html>
