--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,32 @@
 
 <head>
   <meta charset="utf-8">
-  <title>EmailVerification</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Verification</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet" /> -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400&family=Roboto&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@600&family=Roboto&display=swap"
+    rel="stylesheet">
+
+
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 
-<body style="width: 100%; height: 100%;">
+<body style="width: 100%; height: 100vh !important;">
   <app-root></app-root>
 </body>
 
